<resources>
    <string name="app_name">Pruebas de Software</string>
    <string name="signup_label">Last.fm: Sign Up</string>
    <string name="signup_create_account">Create Account</string>
    <string name="edt_usuario">Usuario</string>
    <string name="signup_password">Crontraseña</string>
    <string name="signup_email">Tu Correro</string>
    <string name="signup_saving">Crar una cuenta</string>
    <string name="main_username">Usuario</string>
    <string name="main_password">Contraseña</string>
    <string name="main_login">Entrar</string>
    <string name="main_signup">Regístrate</string>
    <string name="main_newaccount">&quot;¿Aún no tienes una cuenta todavía?&quot;</string>
    <string name="main_authenticating">Autenticación</string>
    <string name="main_forgotpassword">Olvidé mi contraseña</string>
    <string name="btn_menu">Menu</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="login_valido">luis</string>
    <string name="clave_valida">123</string>
    <string name="error_autenticar">LOGIN O PASS INCORRECTOS</string>
    <string name="Introduccion">En un proyecto de desarrollo de software los errores \n
        (bugs en inglés) puede presentarse en cualquiera de las etapas del ciclo de vida
        del software Aún cuando se intente detectarlos despúes de cada fase utilizando
        técnicas como la inspección, algunos errores permanecen sin ser descubiertos </string>
    <string name="intro">Esta aplicacion te ayudara aprender los diferentes tipos de pruebas de software.\n</string>
    <string name="bienvenido">Bienvenido a Pruebas de software </string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>
    <string name="remitente">tema</string>
    <string name="asunto">subtema</string>
    <string name="bibliografia">Bibliografía: \n PruebasSoftware.pdf \n http://ing-sw.blogspot.mx/2005/04/tipos-de-pruebas-de-software.html \n https://github.com/</string>
    <string name="version">Versión: \n 1.0</string>
    <string name="empresa">Empresa: \n Universidad Tecnologica Del Norte de Guanajuato</string>
    <string name="desarrollador">Desarrollador: \n Luis Alberto Grimaldo Robles</string>
    <string name="materia">Materia: \n Desarrollo de Aplicaciones III</string>
    <string-array name="temas">
        <item>I. Pruebas Unitarias</item>
        <item>II. Pruebas de aceptacion de usuario</item>
        <item>III. Pruebas de Regresión</item>
        <item>IV. Pruebas Funcionales</item>
        <item>V. Pruebas de Integración</item>
        <item>VI. Pruebas de Calidad de Código</item>

    </string-array>
    <string name="menu1">Grafica de Quizes</string>
    <string name="menu2">Configuracion</string>
    <string name="menu3">Avances del Curso</string>
    <string name="menu4">Enviar a correo</string>
    <string name="menu5">Pruebas de Codigo</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Next</string>
    <string name="title_activity_result">Results!!!</string>
    <string name="rock">Rock</string>
    <string name="electronica">Electronica</string>
    <string name="intente">Intente otra vez</string>
    <string name="contrasenia_invalida">Contrasenia Invalida</string>
    <string name="contrasenia_sin_conincidir">Las Contrasenias No Coinciden</string>
    <string name="datos_guardados">Datos Guardados</string>
    <string name="temaI">"I.- Pruebas Unitarias"</string>
    <string name="temaII">"II.- Pruebas de Aceptación de Usuario"</string>
    <string name="temaIII">"III.- Pruebas de Regreción"</string>
    <string name="temaIV">"IV.- Pruebas Funcionales"</string>
    <string name="temaV">"V.- Pruebas de Integración"</string>
    <string name="temaVI">"VI.- Pruebas de Calidad de Código"</string>
    <string name="save_result">Guardar Resultado</string>
    <string name="ResultadoQuiz">Resultado de tus quizes:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Habilitar recomendaciones sociales</string>
    <string name="pref_description_social_recommendations">Recomendaciones para las personas en contacto basado en el historial de mensajes
    </string>
    <string name="pref_title_display_name">Mostrar nombre</string>
    <string name="pref_default_display_name">Luis Alberto Grimaldo</string>
    <string name="pref_title_add_friends_to_messages">Añadir amigos a los mensajes</string>
    <string-array name="pref_example_list_titles">
        <item>Siempre</item>
        <item>Cuando sea posible</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Datos &amp; Sincronizacion</string>
    <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
            <string name="pref_title_system_sync_settings">
Configuración de sincronización del sistema</string>
    <string name="pref_header_notifications">Notificaciones</string>
    <string name="pref_title_new_message_notifications">
Nuevas notificaciones de mensajes</string>
    <string name="pref_title_ringtone">Tono de llamada</string>
    <string name="pref_ringtone_silent">Silencio</string>
    <string name="pref_title_vibrate">Vibrar</string>
    <string name="questionI">¿Quien propuso la prueba del camino básico ?</string>
<string-array name="preguntaI">
    <item>¿Quien propuso la prueba del camino básico ?</item>
    <item>Tom McCabe</item>
    <item>Tom Robert</item>
    <item>Tom Charlie</item>
    <item>Tom McCabe</item>
</string-array>
</resources>