<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/black_gradient"
    android:layout_height="match_parent"
    android:weightSum="1">


    <ImageView android:id="@+id/ImageView01"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_margin="48dip"
        android:src="@drawable/ic_action_cloud"
        android:layout_weight="0.24"
        android:layout_gravity="center_horizontal">
    </ImageView>

    <TextView android:layout_width="wrap_content"
        android:textColor="@color/colorBlanco"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/desarrollador"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.1"
       />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/colorBlanco"
    android:textAlignment="center"
    android:layout_gravity="center_horizontal"
    android:text="@string/empresa"
    android:layout_weight="0.1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlanco"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/materia"
        android:layout_weight="0.1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlanco"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/version"
        android:layout_weight="0.1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlanco"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/bibliografia"
        android:layout_weight="0.1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/btn_regresar_acerca"
        android:background="@drawable/sign_in_button"
        android:textColor="@color/colorBlanco"
        android:text="@string/btn_menu" />

</LinearLayout>